--- a/app/views/shared/_footer_area.html.haml
+++ b/app/views/shared/_footer_area.html.haml
@@ -3,7 +3,7 @@
     .row
       .col-md-6
         .f-about
-          = image_tag 'logo.png'
+          =# image_tag 'logo.png'
           %ul.list-unstyled.f-contact
             %li
               %i.fa.fa-map-marker
@@ -27,7 +27,7 @@
               .post-con
                 %p
                   = link_to article.title.truncate(25), article_path(article)
-                %span Feb 11, 2019
+                %span Feb 11, 2021
       -# .col-md-4
       -#   .f-newsltr
       -#     .sec-title
