--- a/app/views/shared/_logo_area.html.haml
+++ b/app/views/shared/_logo_area.html.haml
@@ -1,11 +1,11 @@
 %section.logo-area#btt
   .container
     .row
-      .col-md-6
+      .col-md-8
         .logo
           = link_to root_path do
-            = image_tag 'logo.png', class: 'img-fluid', width: '400'
-      .col-md-6
+            = image_tag 'header-locos.png', class: 'img-fluid', width: '400'
+      .col-md-4
         .searchbar.text-right
           %form{:action => "#"}
             %input{:placeholder => "Buscar...", :required => "", :type => "text"}/
