more static data

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -8,14 +8,29 @@
       .col-lg-6.col-md-12
         .about-box
           %h4
-            AAAJ y su gente
+            Locos por Argentinos
           %p
-            Podría ser un cuento de Sacheri, de Fontanarrosa, de Galeano o hasta del gordo Caseari.
-            Era un grupo de siete u ocho pibes del barrio de la paternal que tenían un sueño, tener su programa de radio. 
-            Claro por ese entonces argentinos juniors era como los gitanos, no tenia cancha y jugaba de local en deportivo español, huracán, atlanta, en boca. Claro no tenia una localia firme, pero cada vez que terminaba un partido estos adolescentes se quedaban hasta altas horas de la noche hablando y soñando. Por que deportivo español y hasta chacarita tenia su audición, y como el bicho de la paternal no iba a tener su programa de radio. Fue así que rompiendo algunas alcancías, buscando publicidad en el kiosco de la esquina, sobre san blas o jonte, la veterinaria, hasta la tintorería de un chino o de un japones ahí sobre la calle terrada, iban poniendo algunos pesos y fue así como argentinos juniors y su gente armo su primer programa, era en fm sol, juan b. justo y añasco por ahí, sobre la calle añasco. Claro que si vos cruzabas Juan B. justo para el otro lado, aquel 3 de octubre de 1990 tal vez los escucharás con ruido, pero si estabas del lado par lo escuchabas perfecto. Si cruzabas la av. San Martin, ahí la señal se te iba, pero lo mágico fue el primer día, el otro fin de semana cuando argentinos jugo de local. Me parece estoy casi seguro que fue contra huracán, la gente comentaba " che escucharon argentinos tiene su programa de radio", tiene la audición. Claro por ese entonces se llama audición al programa, por que uno tenia que esperar treinta segundos que el gordo Muñoz o Victor Hugo diga el flash informativo: Argentinos juniors (treinta segundos) y no llegabas a enterarte de nada. y ahora ya se cumplen 29 años que argentinos juniors y su Gente tiene su programa y vos todos los miércoles a las 22 horas podes sintonizar am 610 y que vas a conseguir?. Te vas a informar, vas a formar una idea, te vas a entretener y de eso se trata que cada miércoles Argentinos Juniors y su Gente entre adentro de tu corazón.
+            Este es un grupo de amigos muy especial, ya que los une la amistad y el amor por el tifón de boyaca..
+            Hemos compartido asados... tardes de mate... cenas familiares... y siempre nuestras charlas terminaban hablando de lo que más nos apasiona... el fútbol... el bicho... el club... 
+          %p
+            Luego de varias sobremesas, se gestó una idea ...un sueño ... nuestro sueño... llevar nuestras charlas mas allá y compartirlas con ustedes... y que ustedes las compartan con nosotros... 
+          %p
+            Alguno dijo " che y se hacemos un programa de radio?... " algo impensado hace unos años atrás... .. Con tanta vivencias juntos, era el momento justo en que el grupo emprendiera un objetivo en común.
+          %p
+            Y esa idea se tranformo en meta... y esa meta se plasmó en un programa... muchos nos llamaban locos! Hoy sabemos que lo somos.... somos locos por una pasión... somos locos por el club de nuestros amores... somos locos por los colores.. sí... somos LOCOS X ARGENTINOS! 
+          %p
+            Con esfuerzo y trabajo logramos crear nuestro programa... nos propusimos acercarte historias... actualidad... entrevistas... opiniones... anécdotas.... interactuar con vos que estás del otro lado... escucharte ... sí darte un espacio para que tu opinión nutra el programa martes a martes.
+          %p
+            Hoy fuimos creciendo y lo que alguna vez fue una loca idea, en la actualidad se concretó en este espacio de charla que todos los martes podes vernos en vivo por YouTube, Instagram, Twitter, Facebook e internet. 
+          %p
+            Por eso somos locos por argentinos, porque todo el tiempo estámos revisando y corroborando cada información que sale sobre el club. 
+          %p
+            También se esta empezando un hermosa interacción con los oyente que quieren que la semana sea más corta, para poder escucharnos y ver que hay de nuevo en nuestra hermosa institucional llamada Argentinos Juniors.
+          %p
+            Los integrantes de locos por argentinos son: Rodrigo Antonello (experimentado conductor), Carlos Miro (historiador del programa), Diego Castro (panelista del programa) Dario Ponce (Ingeniero del programa) Óscar Alvarez (Panelista del programa )
       .col-lg-6.col-md-12
         .about-img
-          = image_tag 'about.jpg', class: 'img-fluid'   
+          = image_tag 'logo-big.jpg', class: 'img-fluid'   
 -#       .col-md-12
 -#         .team
 -#           .sec-title
