--- a/app/views/shared/_follow_us_footer.html.haml
+++ b/app/views/shared/_follow_us_footer.html.haml
@@ -1,13 +1,13 @@
 %ul.list-unstyled.list-inline.f-social
+  -# %li.list-inline-item
+  -#   = link_to "https://www.facebook.com/aaajysugente/", target: "blank" do
+  -#     %i.fa.fa-facebook
   %li.list-inline-item
-    = link_to "https://www.facebook.com/aaajysugente/", target: "blank" do
-      %i.fa.fa-facebook
-  %li.list-inline-item
-    = link_to "https://twitter.com/aaajysugente", target: "blank" do
+    = link_to "https://twitter.com/argentinos_por", target: "blank" do
       %i.fa.fa-twitter
   %li.list-inline-item
-    = link_to "https://www.instagram.com/aaajysugente/", target: "blank" do
+    = link_to "https://www.instagram.com/locos_x_argentinos", target: "blank" do
       %i.fa.fa-instagram
   %li.list-inline-item
-    = link_to "https://www.youtube.com/channel/UCcatJNy2S6AzqVUJ8NiFR9w/", target: "blank" do
+    = link_to "https://www.youtube.com/channel/UCMbQq-58AN8vmEgkcjiTI6A", target: "blank" do
       %i.fa.fa-youtube
