--- a/app/views/shared/_follow_us_sidebar.html.haml
+++ b/app/views/shared/_follow_us_sidebar.html.haml
@@ -3,14 +3,14 @@
     %h5 Seguinos en
   %ul.list-unstyled.clearfix
     %li
-      = link_to "https://www.facebook.com/aaajysugente/", target: "blank" do
+      = link_to "https://www.facebook.com/radiocontactoam1460", target: "blank" do
         %i.fa.fa-facebook
-        %p 750
+        -# %p 750
     %li
-      = link_to "https://twitter.com/aaajysugente", target: "blank" do
+      = link_to "https://twitter.com/argentinos_por", target: "blank" do
         %i.fa.fa-twitter
-        %p 2,433
+        -# %p 2,433
     %li
-      = link_to "https://www.instagram.com/aaajysugente/", target: "blank" do
+      = link_to "https://www.instagram.com/locos_x_argentinos", target: "blank" do
         %i.fa.fa-instagram
-        %p 1,010
+        -# %p 1,010
