--- a/app/views/shared/_footer_area.html.haml
+++ b/app/views/shared/_footer_area.html.haml
@@ -7,13 +7,13 @@
           %ul.list-unstyled.f-contact
             %li
               %i.fa.fa-map-marker
-              Av. Gral. Paz 3755, Villa Lynch, Buenos Aires
+              Zarate 154 1718 San Antonio de Padua, Buenos Aires, Argentina
             %li
               %i.fa.fa-envelope
-              argentinosjrsysugente@gmail.com
+              locosxargentinos@gmail.com
             %li
               %i.fa.fa-phone
-              11-6938-0078
+              11-2164-2349
           = render 'shared/follow_us_footer'
       .col-md-6
         .f-post
