hide search box

--- a/app/views/shared/_logo_area.html.haml
+++ b/app/views/shared/_logo_area.html.haml
@@ -6,8 +6,8 @@
           = link_to root_path do
             = image_tag 'header-locos.png', class: 'img-fluid', width: '250'
       .col-md-4
-        .searchbar.text-right
-          %form{:action => "#"}
-            %input{:placeholder => "Buscar...", :required => "", :type => "text"}/
-            %button{:type => "submit"}
-              %i.fa.fa-search
+        -# .searchbar.text-right
+        -#   %form{:action => "#"}
+        -#     %input{:placeholder => "Buscar...", :required => "", :type => "text"}/
+        -#     %button{:type => "submit"}
+        -#       %i.fa.fa-search
