--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,9 +22,10 @@
  *= require_self
  */
 
-
-.slider-area{
-  margin-top: 15px;
+@media only screen and (min-width: 600px) {
+  .slider-area{
+    margin-top: 15px;
+  }
 }
 
 .sidebar-layer {
