--- a/app/views/shared/_mobile_menu_area.html.haml
+++ b/app/views/shared/_mobile_menu_area.html.haml
@@ -5,12 +5,11 @@
         .mobile-menu
           %nav#dropdown
             %a{:href => ""}
-              = image_tag 'logo.png'
+              = image_tag 'header-locos.png'
             %ul.list-unstyled
-              %li
-                %a INICIO
-                %ul.list-unstyled
-                  - Category.all.each do |category|
-                    %li= link_to category.name, home_category_path(category.slug)
-              %li
-                = link_to "FUTBOL PROFESIONAL", home_category_path('futbol-profesional')
+              - Category.parents.each do |parent_category|
+                %li
+                  = link_to parent_category.name, home_category_path(parent_category.slug)
+                  %ul.list-unstyled
+                    - parent_category.children.each do |child_category|
+                      %li= link_to child_category.name, home_category_path(child_category.slug)
